--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     "karma-coffee-preprocessor": "~0.3.0",
     "karma-jasmine": "~0.3.8"
   },
-  "license": "AGPL-3.0"
+  "license": "AGPL-3.0",
+  "dependencies": {
+    "angular-google-maps": "https://github.com/angular-ui/angular-google-maps#2.0.0"
+  }
 }
