Update rubocop todo lists

--- a/.rubocop_manual_todo.yml
+++ b/.rubocop_manual_todo.yml
@@ -321,6 +321,15 @@ Layout/LineLength:
   - spec/support/request/shop_workflow.rb
   - spec/support/request/web_helper.rb
   - spec/support/seeds.rb
+  - engines/order_management/app/services/order_management/reports/bulk_coop/bulk_coop_report.rb
+  - spec/controllers/base_controller2_spec.rb
+  - spec/features/consumer/caching/darkswarm_caching_spec.rb
+  - spec/models/calculator/flexi_rate_spec.rb
+  - spec/models/calculator/price_sack_spec.rb
+  - spec/models/spree/stock_item_spec.rb
+  - spec/requests/api/orders_spec.rb
+  - spec/swagger_helper.rb
+  - spec/views/spree/admin/payment_methods/index.html.haml_spec.rb
 
 Metrics/AbcSize:
   Max: 15
@@ -444,6 +453,11 @@ Metrics/AbcSize:
   - spec/models/product_importer_spec.rb
   - spec/services/order_checkout_restart_spec.rb
   - spec/support/performance_helper.rb
+  - app/controllers/application_controller.rb
+  - app/models/spree/order/checkout.rb
+  - app/models/spree/payment/processing.rb
+  - app/models/spree/payment.rb
+  - engines/order_management/app/services/order_management/reports/bulk_coop/bulk_coop_report.rb
 
 Metrics/BlockLength:
   Max: 25
@@ -482,6 +496,10 @@ Metrics/BlockLength:
   - spec/support/delayed_job_helper.rb
   - spec/support/matchers/select2_matchers.rb
   - spec/support/matchers/table_matchers.rb
+  - app/models/spree/order/checkout.rb
+  - app/models/spree/payment/processing.rb
+  - spec/requests/api/orders_spec.rb
+  - spec/swagger_helper.rb
 
 Metrics/CyclomaticComplexity:
   Max: 6
@@ -513,6 +531,9 @@ Metrics/CyclomaticComplexity:
   - lib/spree/core/controller_helpers/ssl.rb
   - lib/spree/localized_number.rb
   - spec/models/product_importer_spec.rb
+  - app/models/spree/order/checkout.rb
+  - app/models/spree/payment.rb
+  - engines/order_management/app/services/order_management/reports/bulk_coop/bulk_coop_report.rb
 
 Metrics/PerceivedComplexity:
   Max: 7
@@ -539,6 +560,8 @@ Metrics/PerceivedComplexity:
   - lib/spree/core/controller_helpers/ssl.rb
   - lib/spree/localized_number.rb
   - spec/models/product_importer_spec.rb
+  - app/models/spree/order/checkout.rb
+  - engines/order_management/app/services/order_management/reports/bulk_coop/bulk_coop_report.rb
 
 Metrics/MethodLength:
   Max: 10
@@ -645,6 +668,11 @@ Metrics/MethodLength:
   - spec/features/consumer/shopping/variant_overrides_spec.rb
   - spec/models/product_importer_spec.rb
   - spec/support/request/authentication_helper.rb
+  - app/models/spree/order/checkout.rb
+  - app/models/spree/payment/processing.rb
+  - engines/order_management/app/services/order_management/reports/bulk_coop/bulk_coop_allocation_report.rb
+  - engines/order_management/app/services/order_management/reports/bulk_coop/bulk_coop_report.rb
+  - engines/order_management/app/services/order_management/reports/bulk_coop/bulk_coop_supplier_report.rb
 
 Metrics/ClassLength:
   Max: 100
@@ -686,6 +714,8 @@ Metrics/ClassLength:
   - lib/open_food_network/permissions.rb
   - lib/open_food_network/users_and_enterprises_report.rb
   - lib/open_food_network/xero_invoices_report.rb
+  - app/models/spree/payment.rb
+  - engines/order_management/app/services/order_management/reports/bulk_coop/bulk_coop_report.rb
 
 Metrics/ModuleLength:
   Max: 100
@@ -728,6 +758,8 @@ Metrics/ModuleLength:
   - spec/models/spree/variant_spec.rb
   - spec/services/permissions/order_spec.rb
   - spec/support/request/web_helper.rb
+  - app/models/spree/order/checkout.rb
+  - app/models/spree/payment/processing.rb
 
 Metrics/ParameterLists:
   Max: 5
@@ -736,3 +768,8 @@ Metrics/ParameterLists:
   - app/models/product_import/entry_processor.rb
   - lib/open_food_network/xero_invoices_report.rb
   - spec/features/admin/reports_spec.rb
+
+Lint/UselessAssignment:
+  Exclude:
+    - 'spec/**/*'
+    - 'lib/spree/core/controller_helpers/common.rb'
