--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "openfoodnetwork",
   "version": "1.0.0",
   "repository": "https://github.com/openfoodfoundation/openfoodnetwork",
+  "scripts": {
+    "preinstall": "npm install bower"
+  },
   "devDependencies": {
     "jasmine-core": "~2.4.1",
     "karma": "~0.13.22",
@@ -11,6 +14,7 @@
   },
   "license": "AGPL-3.0",
   "dependencies": {
+    "bower": "",
     "angular-google-maps": "https://github.com/angular-ui/angular-google-maps#2.0.0"
   }
 }
