--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "url": "https://github.com/openfoodfoundation/openfoodnetwork"
   },
   "devDependencies": {
+    "jasmine-core": "~2.4.1",
     "karma": "~0.13.22",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-jasmine": "~0.3.8",
-    "jasmine-core": "~2.4.1",
-    "karma-coffee-preprocessor": "~0.3.0"
+    "karma-coffee-preprocessor": "~0.3.0",
+    "karma-jasmine": "~0.3.8"
   },
-  "license": "AGPL-1.0"
+  "license": "AGPL-1.0",
+  "dependencies": {
+    "moment": "^2.28.0"
+  }
 }
