--- a/docker/build
+++ b/docker/build
@@ -1,7 +1,7 @@
 #!/bin/bash
 set -e
 
-# This script builds the Docker container, seeds the app with simulated data, and logs the screen output.
+# This script builds the Docker container, seeds the app with sample data, and logs the screen output.
 
 DATE=`date +%Y%m%d-%H%M%S-%3N`
 docker/build-log 2>&1 | tee log/build-$DATE.log
