--- a/.rubocop_manual_todo.yml
+++ b/.rubocop_manual_todo.yml
@@ -814,6 +814,7 @@ Metrics/ModuleLength:
   - app/helpers/spree/admin/navigation_helper.rb
   - app/models/spree/order/checkout.rb
   - app/models/spree/payment/processing.rb
+  - engines/catalog/spec/services/catalog/product_import/products_reset_strategy_spec.rb
   - engines/order_management/spec/services/order_management/order/updater_spec.rb
   - engines/order_management/spec/services/order_management/stock/package_spec.rb
   - engines/order_management/spec/services/order_management/subscriptions/estimator_spec.rb
