--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       POSTGRES_PASSWORD: f00d
       POSTGRES_USER: ofn
       POSTGRES_DB: open_food_network_dev
+    ports:
+      - 5432:5432
     volumes:
       - 'postgres:/var/lib/postgresql/data'
   web:
