Corrected RuboCop offenses in spec/support/request/shop_workflow.rb

--- a/.rubocop_manual_todo.yml
+++ b/.rubocop_manual_todo.yml
@@ -845,6 +845,7 @@ Metrics/ModuleLength:
   - spec/models/spree/variant_spec.rb
   - spec/services/permissions/order_spec.rb
   - spec/services/variant_units/option_value_namer_spec.rb
+  - spec/support/request/shop_workflow.rb
 
 Metrics/ParameterLists:
   Max: 5
