--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,7 @@ services:
     command: >
       bash -c "wait-for-it -t 30 db:5432 &&
                rm -f tmp/pids/server.pid &&
+               yarn install &&
                bundle exec rails s -p 3000 -b '0.0.0.0'"
   worker:
     tty: true
