--- a/.rubocop_manual_todo.yml
+++ b/.rubocop_manual_todo.yml
@@ -527,7 +527,11 @@ Metrics/CyclomaticComplexity:
   - app/models/spree/order/checkout.rb
   - app/models/spree/payment_method.rb
   - app/models/spree/payment.rb
+  - app/models/spree/preference.rb
+  - app/models/spree/preferences/preferable.rb
+  - app/models/spree/preferences/preferable_class_methods.rb
   - app/models/spree/product_decorator.rb
+  - app/models/spree/return_authorization.rb
   - app/models/spree/zone.rb
   - app/models/variant_override_set.rb
   - app/services/cart_service.rb
@@ -561,7 +565,10 @@ Metrics/PerceivedComplexity:
   - app/models/spree/order/checkout.rb
   - app/models/spree/payment_method.rb
   - app/models/spree/payment.rb
+  - app/models/spree/preferences/preferable.rb
+  - app/models/spree/preferences/preferable_class_methods.rb
   - app/models/spree/product_decorator.rb
+  - app/models/spree/return_authorization.rb
   - app/models/spree/zone.rb
   - app/models/variant_override_set.rb
   - app/services/cart_service.rb
@@ -587,7 +594,7 @@ Metrics/PerceivedComplexity:
   - app/models/spree/ability.rb
   - app/models/spree/address.rb
   - app/models/spree/order/checkout.rb
-  - app/models/spree/order_decorator.rb
+  - app/models/spree/order.rb
   - app/models/spree/product_decorator.rb
   - app/models/spree/zone.rb
   - engines/order_management/app/services/order_management/reports/bulk_coop/bulk_coop_report.rb
@@ -745,6 +752,8 @@ Metrics/ClassLength:
   - app/models/spree/ability.rb
   - app/models/spree/address.rb
   - app/models/spree/credit_card.rb
+  - app/models/spree/line_item.rb
+  - app/models/spree/order.rb
   - app/models/spree/payment.rb
   - app/models/spree/shipment.rb
   - app/models/spree/user.rb
@@ -779,6 +788,7 @@ Metrics/ModuleLength:
   - lib/open_food_network/column_preference_defaults.rb
   - spec/controllers/admin/order_cycles_controller_spec.rb
   - spec/controllers/api/orders_controller_spec.rb
+  - spec/lib/open_food_network/order_cycle_form_applicator_spec.rb
   - spec/lib/open_food_network/order_cycle_permissions_spec.rb
   - spec/models/spree/adjustment_spec.rb
   - spec/models/spree/credit_card_spec.rb
@@ -793,3 +803,9 @@ Metrics/ParameterLists:
   - app/models/product_import/entry_processor.rb
   - lib/open_food_network/xero_invoices_report.rb
   - spec/features/admin/reports_spec.rb
+
+Lint/UselessAssignment:
+  Exclude:
+  - 'spec/**/*'
+  - 'app/models/spree/taxon.rb'
+  - 'lib/spree/core/controller_helpers/common.rb'
