--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,7 @@ services:
     command: >
       bash -c "wait-for-it -t 30 db:5432 &&
                rm -f tmp/pids/server.pid &&
+               (bundle check || bundle install)
                yarn install &&
                bundle exec rails s -p 3000 -b '0.0.0.0'"
   worker:
@@ -47,6 +48,7 @@ services:
       OFN_DB_HOST: db
     command: >
       bash -c "wait-for-it -t 30 db:5432 &&
+               (bundle check || bundle install)
                bundle exec rake jobs:work"
 volumes:
   gems:
