--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -211,7 +211,7 @@ jobs:
         run: RAILS_ENV=test bundle exec rake karma:run
 
       - name: Run all other tests
-        run: bundle exec rake spec/{helpers, initializers, jobs, lib, mailers, queries, requests, serializers, services, validators, views}
+        run: bundle exec rake spec/helpers/ spec/initializers/ spec/jobs/ spec/lib/ spec/mailers/ spec/queries/ spec/requests/ spec/serializers/ spec/services/ spec/validators/ spec/views
 
       - name: Run engines tests
         run: bundle exec rake ofn:specs:engines:rspec
